--- a/src/view/delete/delete.fxml
+++ b/src/view/delete/delete.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../update/UpdateMovies.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.delete.DeleteMoviesController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#663cfd" height="720.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#663cfd" height="720.0" layoutX="-14.0" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
       <JFXButton layoutX="55.0" layoutY="150.0" prefHeight="238.0" prefWidth="185.0" ripplerFill="#9a7eff" style="-fx-background-color: #2300A0;" text=" " />
       <ImageView fx:id="imgMovie" disable="true" fitHeight="75.0" fitWidth="75.0" layoutX="110.0" layoutY="231.0">
          <image>
